testsuite/tests/backpack/should_fail/bkpfail05.bkp
package h where
    signature H where
        data T = T1
package t-impl where
    module T where
        data T = T2
package p where
    include h
    include t-impl
    -- Known bug: GHC will not eagerly report an error here although
    -- it could, if it more aggressively checked for type-compatibility
    -- when a hole gets resolved
    signature H(T(..)) where
        import T
package q where
    include t-impl
    module H(T(..)) where
        import T
    -- Fortunately, you'll never be able to instantiate these signatures;
    -- it's just an unsatisfiable set of constraints.
    include p
